--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,68 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.inputsContainer
+{
+  width: 50%;
+  margin: auto;
+  margin-top: 5%;
+  margin-bottom: 5%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+}
+
+.inputFields
+{
+  width: 10%;
+  font-size: 1.5vw;
+  padding: 4% 1%;
+  margin: auto;
+}
+
+.addBtnOne
+{
+  font-size: 3vw;
+  border: none;
+  border-radius: 4px;
+  padding: 1% 0%;
+  width: 10%;
+  margin: auto;
+  cursor: pointer;
+  background-color: rgb(9, 130, 196);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.addBtnTwo
+{
+  font-size: 3vw;
+  border: none;
+  border-radius: 4px;
+  padding: 1% 0%;
+  width: 10%;
+  margin: auto;
+  cursor: pointer;
+  background-color: rgb(51, 200, 73);
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.equals
+{
+  font-size: 5vw;
+}
+
+.sumDisplay
+{
+  font-size: 5vw;
+}
+
+.toggleBtn
+{
+  font-size: 1.7vw;
+  border: none;
+  background-color: rgb(9, 130, 196);
+  color: white;
+  width: 20%;
+  padding: 1% 0%;
+  border-radius: 4px;
+  cursor: pointer;
 }
